# ChangeLog for dev-util/catalyst
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/catalyst/ChangeLog,v 1.189 2008/02/21 06:46:58 wolf31o2 Exp $

*catalyst-2.0.6_pre9 (21 Feb 2008)

  21 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  +catalyst-2.0.5.ebuild, +catalyst-2.0.6_pre9.ebuild:
  Updating to 2.0.6_pre9, since 2.0.6_pre8 introduced a bug which caused
  pkgcache to no longer work. Also, restoring 2.0.5 since it was the only
  stable version. Of course, repoman won't let me commit it straight to
  stable, so marking it ~arch across the board.

*catalyst-2.0.6_pre8 (20 Feb 2008)

  20 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  -catalyst-2.0.6_pre5.ebuild, -catalyst-2.0.6_pre6.ebuild,
  +catalyst-2.0.6_pre8.ebuild, catalyst-9999.ebuild:
  Adding a new 2.0.6_pre8 to replace the other pre-release versions in testing.

*catalyst-2.0.6_pre6 (14 Feb 2008)

  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  -catalyst-2.0.5.ebuild, -catalyst-2.0.6_pre4.ebuild,
  +catalyst-2.0.6_pre6.ebuild:
  Adding 2.0.6_pre6 to replace 2.0.6_pre5, which had a really nasty little bug
  in it.

*catalyst-2.0.6_pre5 (14 Feb 2008)

  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  +catalyst-2.0.6_pre5.ebuild:
  Version bump to 2.0.6_pre5 for testing.

  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  -catalyst-2.0.6_pre1.ebuild, -catalyst-2.0.6_pre2.ebuild,
  -catalyst-2.0.6_pre3.ebuild:
  Removing older pre-release versions.

  14 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  catalyst-2.0.6_pre4.ebuild, catalyst-9999.ebuild:
  Updated with the newest ebuilds from my overlay.

*catalyst-2.0.6_pre4 (12 Feb 2008)

  12 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  +catalyst-2.0.6_pre4.ebuild:
  Version bump to 2.0.6_pre4 for testing. Since this fixes a nice little bug
  in stage1's USE code, expect to rebuild every package when building. Say
  goodbye to your cache.
