@@ -4,16 +4,16 @@ Hash: SHA1
 DIST catalyst-2.0.5.tar.bz2 788974 RMD160 6b61621e26aafc55240a41a88b4f5e772be037a5 SHA1 afa6ffd69558b5673cfe112617b4191ba359ebae SHA256 bd4070462f2718e1622539c749b0cb5df3c416d97b7531d3524717836c16db90
 DIST catalyst-2.0.6_pre8.tar.bz2 790793 RMD160 121e3daa3d5ea56a0be7c2f5fac3ee0a6f201989 SHA1 ff674a646f3ce9677e80139a802ba8615dbb3efc SHA256 d683c2c9bd028f09c131ebc1aed4082b4b3ed1b301c1f781297bf27ae5cda13f
 DIST catalyst-2.0.6_pre9.tar.bz2 790860 RMD160 ac42e77d4b0c14dca7c61e5a5f11f8feaf13b079 SHA1 62b9afbf0581116215a1e28b357507dd237338a1 SHA256 8f521d7513a9eb460cc0556282d900beaed269783e75e84b7779226f46176b4f
-EBUILD catalyst-2.0.5.ebuild 2519 RMD160 d012085c601ee526c01f460bcdcc6d00b7f44275 SHA1 ccc9a24d60f7bf6e8d0eb5230a4a02ae7496b4a6 SHA256 befc7eae213cfa8d8d4bc6c5d825ba1ef90976c5ee880be933b8026964563a6a
+EBUILD catalyst-2.0.5.ebuild 2426 RMD160 2b71f98603ab4f8e144e365504c0dbe96c41a017 SHA1 02035561fdaf1d586978043a8b42c53ccdca416a SHA256 2827ddb3a618ee5ab9e9d683c77cdce1e096808112fd2487731c36ab2c8114a7
 EBUILD catalyst-2.0.6_pre8.ebuild 2892 RMD160 bcf82b534793959ad1fece920b1fec442ffcb22e SHA1 d36950473d07292d47924797ef6a2ede7e084e70 SHA256 4a6f2d9afbcfb6fad8cf74f9f12fb92eb3fc455a01e8bc4752e43af77e3028f8
 EBUILD catalyst-2.0.6_pre9.ebuild 2892 RMD160 4c2e0f4200898346bae8dc44b3afd31628fa1664 SHA1 51d3ac5383664804f661b882bde6f9a980459a91 SHA256 49144e7b67bee0f87e74c4ff891396746194b2a7a92a8081eedd4405f6cbb8a1
 EBUILD catalyst-9999.ebuild 2875 RMD160 9592369bdbc9a66628f5c4fa858fb065709a81f0 SHA1 cd106fbd01d2db39bbe4846b86e870b8920be85c SHA256 c989ed9c2008874f8d055efdd559da564d3e422d64c1e75230b0d6ce5a5fd626
-MISC ChangeLog 41811 RMD160 2c274fc529fe8cdb6699e92e4c9d36100ee96e58 SHA1 a213918aeb533605d56fd6a4a7ab919fb2ecd74f SHA256 67d050ccb266761d57262658d9d5462c80fffc41682e303b01f62072bce2df36
+MISC ChangeLog 41919 RMD160 576c20de5a3c3b88a00f346410f4cd6d2d49a498 SHA1 12c339c914108797f3a8cc66046fdddb4385d5b3 SHA256 c3ea11e61108a3721fb0948e338b33cf0a4d23bff947d453fa5c175cdb909105
 MISC metadata.xml 223 RMD160 cd1cc28ce9a44a5bcf0835859270b312c2a9c057 SHA1 99dbb429b3fbea01bf260400c5686461329f8f2c SHA256 df88f8a951c171af2582027db09973af5e5f0a5f578636a8f836ecea8c55cd4d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFHvR5gkT4lNIS36YERAhBgAKCMhrmpF0ZgD6ZklOjYL2L5lvnZaACfewZS
-lSlPTvtuaU8smqP5XE1Td84=
-=yKX4
+iD8DBQFHvR6ckT4lNIS36YERAoYMAJ0eNCmv/nGlAiXRZso15p+GDUQNHQCgtbOy
+lxhfM3GkOs25++VR58T4eVA=
+=z3Rq
 -----END PGP SIGNATURE-----
