@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/catalyst
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/catalyst/ChangeLog,v 1.189 2008/02/21 06:46:58 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/catalyst/ChangeLog,v 1.190 2008/02/21 06:47:58 wolf31o2 Exp $
+
+  21 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst-2.0.5.ebuild:
+  Marking 2.0.5 stable again.
 
 *catalyst-2.0.6_pre9 (21 Feb 2008)
 
